# SodaSimProto

./: .gitignore  CMakeLists.txt  README.md  SodaSimProto.Build.cs  SodaSimProtoConfig.cmake.in  build.sh
Private/: LidarSerialization.cpp  PoseSerialization.cpp  RadarSerialization.cpp  SodaSimProtoModule.cpp  UltrasonicSerialization.cpp
Public/SodaSimProto/: Camera.hpp  Common.hpp  Gazebo.hpp  Lidar.hpp  Navigation.hpp  Pose.hpp  Radar.hpp  RedundancyChecks.hpp  Ultrasonic.hpp  V2X.hpp  VehicleState.hpp
cmake/: Packaging.cmake  Version.cmake
